# dsci-customer

./: .gitignore  CLAUDE.md  Makefile  PROJECT_SUMMARY.txt  README.md  main.ipynb  pyproject.toml
experiments/: comparison.ipynb  eda.ipynb  empirical_lapse_threshold.ipynb  lifelines.ipynb  lifetimes.ipynb  scikit_survival.ipynb
notebooks/: comparison.ipynb  eda.ipynb  lifetimes.ipynb  scikit_survival.ipynb
scripts/: lapse_propensity.py  lapse_propensity_backtest.py  test_lapse_propensity.py  test_metrics.txt
scripts/_legacy/: lapse_propensity.py  lapse_propensity_requirements.txt
src/: __init__.py  config.py  data.py  definitions.py  eval.py  model.py  utils.py
src/_legacy/propensity_to_lapse/: data.py
src/lapse_propensity/: __init__.py  backtest.py  config.py  eval.py  features.py  model.py  pipeline.py  test_metrics.txt
src/utils/: bq.py  logger.py
test/: test_lapse_propensity.py  test_lapse_propensity_backtest.py
