[project]
name = "ltv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db-dtypes>=1.4.3",
    "dotenv>=0.9.9",
    "google-adk>=1.9.0",
    "google-cloud-bigquery-storage>=2.32.0",
    "google-cloud-bigquery>=3.35.1",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "lifetimes>=0.11.3",
    "lifelines>=0.30.0",
    "scikit-survival>=0.25.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.ruff]
lint.ignore = [
    "E"
    ]